<resources>
    <string name="app_name">Products</string>
    <string name="action_settings">Settings</string>
    <string name="settings_amazon">Amazon</string>
    <string name="settings_flipkart">FlipKart</string>
    <string name="settings_shopclues">ShopClues</string>
    <string name="add">Add</string>
    <string name="merchant">Merchant Type :</string>
    <string name="ratings">Ratings :</string>
    <string name="productName">Product Name</string>
    <string name="price">Price</string>
    <string name="registration">Product Details Form</string>
</resources>
