<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/title"
                android:text="@string/registration"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
               android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:id="@+id/product_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rectange_shape"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                 android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

        <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@+id/product_price"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/productName"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/product_imageview"/>

        <EditText
                android:id="@+id/product_price"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/product_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/ratings_text"
                android:text="@string/ratings"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/product_price"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>

        <RatingBar
                android:id="@+id/product_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.25"
                android:numStars="5"
                android:rating="4.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/ratings_text"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/merchant_type"
                android:text="@string/merchant"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/product_ratings" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

        <Spinner
                android:id="@+id/product_merchant"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectange_shape"
                app:layout_constraintTop_toBottomOf="@+id/merchant_type" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

        <Button
                android:id="@+id/add_product"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/product_merchant"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"

               />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>